# migration-learning

./: .gitignore  README.md  alembic.ini  main.py  pyproject.toml  verify_migration.py
alembic/: env.py
alembic/versions/: 4e4ef5e12df5_test_with_server_default.py  b50da25d899c_test.py  e09f427cba64_create_user_table.py
models/: __init__.py  base.py  user.py
